k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p4poetry
  labels:
    app: p4poetry
