k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p4poetry
  namespace: p4poetry
  labels:
    app: p4poetry
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: metrics
      port: 2125
      targetPort: 2125
      protocol: TCP
  selector:
    app: p4poetry
